# Vidya-

./: .gitignore  build.gradle.kts.snippet
app/src/main/assets/: .gitkeep
app/src/main/cpp/: CMakeLists.txt  indic_tts_jit.cpp
app/src/main/java/com/vidya/core/ai/: AiTeacherLoop.kt  ConversationBuffer.kt  GemmaInferenceEngine.kt  IntentClassifier.kt  KnowledgeRetriever.kt  ResponseGenerator.kt
app/src/main/java/com/vidya/core/audio/: AudioPipelineOrchestrator.kt  LanguageIdModel.kt  NativeIndicEngine.kt  VidyaAudioRecorder.kt  VidyaSpeechOrchestrator.kt  WhisperInterpreter.kt
app/src/main/java/com/vidya/core/auth/: VidyaSecureStorage.kt
app/src/main/java/com/vidya/core/camera/: VidyaCameraEngine.kt
app/src/main/java/com/vidya/core/database/: KnowledgeEntity.kt  SessionDao.kt  SessionEntities.kt
app/src/main/java/com/vidya/core/device/: VidyaVoiceOutput.kt  VoiceManager.kt
app/src/main/java/com/vidya/core/network/: SyncDtos.kt  VidyaApiService.kt  VidyaMediaClient.kt
app/src/main/java/com/vidya/core/session/: VidyaSessionManager.kt
app/src/main/java/com/vidya/core/sync/: DeltaSyncWorker.kt  MediaSyncScheduler.kt  ResumableMediaUploadWorker.kt  VidyaSyncScheduler.kt
cloud-backend/: .env
cloud-backend/app/: auth.py  main.py  routes.py  sync.py
cloud-backend/app/services/: resumable_upload.py  sms.py  upload_router.py
cloud-backend/prisma/: schema.prisma
cloud-backend/tests/: conftest.py  test_routes.py
curriculum-graph/: ncert_seed.json  seed.ts
curriculum-graph/prisma/: schema.prisma
(+10 files in other folders)
